# Garnet

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  package.json  tsconfig.json
apps/desktop/: package.json  tsconfig.json
apps/desktop/backend/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/backend/.cargo/: config.toml
apps/desktop/backend/src/: asset_ops.rs  assets.rs  blend_preview.rs  db.rs  garnet_metadata.rs  indexer.rs  library.rs  main.rs  media_server.rs  modules.rs  native_metadata.rs  pinned_sources.rs  plugins.rs  settings.rs  startup_timing.rs  tags.rs  thumbnails.rs  watcher.rs
apps/desktop/frontend/: build.ts  dev.ts  index.html  splash.html
apps/desktop/frontend/src/: App.tsx  globals.d.ts  main.tsx
apps/desktop/frontend/src/components/: AssetGrid.tsx  AssetList.tsx  AssetThumbnail.tsx  AssetsView.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DetailsSidebar.tsx  FilterBar.tsx  Footer.tsx  GarnetMetadataEditor.tsx  Layout.tsx  Live3DPreview.tsx  MediaDiagnostic.tsx  ModelPreview.tsx  Pagination.tsx  PromptDialog.tsx  Sidebar.tsx  TagEditor.tsx
apps/desktop/frontend/src/lib/: assetContextMenu.ts  grouping.ts  keybinds.ts  loadModelThumbnailer.ts  modelThumbnailer.ts  paths.ts  tauri.ts  thumbnailBus.ts  typeFilters.ts  videoThumbnail.ts
apps/desktop/frontend/src/pages/: AppKeybindsPage.tsx  AppStatsPage.tsx  AssetDetailPage.tsx  LibraryPage.tsx  SettingsPage.tsx  SourcePage.tsx  StubPage.tsx  stubs.tsx
apps/desktop/frontend/src/stores/: assetsStore.ts  bgTasksStore.ts  bootStore.ts  libraryStore.ts  pinnedSourcesStore.ts  prefsStore.ts  selectionStore.ts  undoStore.ts
apps/desktop/frontend/src/styles/: index.css
modules/: README.md
modules/example-module/: manifest.json
plugins/: README.md
plugins/example-plugin/: manifest.json
resources/icons/: README.md  generate-icons.sh  icon.icns
