[package]
name = "garnet"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri = { version = "^2.0.0", features = [] }
tauri-plugin-fs = "^2.0.0"
tauri-plugin-dialog = "^2.0.0"
tauri-plugin-opener = "^2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2.5"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
