[package]
name = "garnet"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri = { version = "^2.0.0", features = ["protocol-asset"] }
tauri-plugin-fs = "^2.0.0"
tauri-plugin-dialog = "^2.0.0"
tauri-plugin-opener = "^2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2.5"
anyhow = "1.0"
thiserror = "2.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
blake3 = "1.5"
kamadak-exif = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["rt", "net", "io-util"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
